# vkbottle_tortoise_template

./: .gitignore  README.md  example.env  pyproject.toml
migrations/models/: 0_20220526041938_init.sql  0_20220528065452_init.sql
vk_bot/: __init__.py  __main__.py  app.py  config.py  initialize.py
vk_bot/data/: messages_example.yaml
vk_bot/database/: __init__.py  database.py
vk_bot/database/models/: user.py
vk_bot/handlers/: __init__.py
vk_bot/handlers/private/: start.py
vk_bot/keyboards/: inline.py
vk_bot/middlewares/: registration.py
vk_bot/tools/: files.py
